# Wireless_power_meter_lite

./: .gitignore  CMakeLists.txt  README.md  last.toml  partitions.csv  sdkconfig  size_files.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: CI.yml  Release.yml  config.toml
components/Button/: Button.cpp
components/Button/include/: Button.h
components/Fonts/: CMakeLists.txt  DENGB.hpp
components/Fonts/Font_include/: DENGB.h  DENGB12.h  DENGB16.h
components/Fonts/Font_src/: DENGB.cpp  DENGB12.cpp  DENGB16.cpp  DENGB20.cpp
components/HXC_TWAI/: CMakeLists.txt
components/HXC_TWAI/include/: HXC_TWAI.h  HXC_TWAI.hpp
components/HXC_TWAI/src/: HXC_TWAI.cpp
components/Interp/: Interp.hpp  ntc_table.c
components/Temperature/: CMakeLists.txt  ESPChipTemperatureSensor.hpp  NTCTemperatureSensor.hpp
components/app/blackbox_service/: CMakeLists.txt  README.md
components/app/blackbox_service/include/: blackbox_service.h
components/app/blackbox_service/private_include/: blackbox_service_internal.h
components/app/blackbox_service/src/: blackbox_config.cpp  blackbox_log_capture.cpp  blackbox_service.cpp  blackbox_snapshot.cpp  blackbox_worker.cpp
components/app/blackbox_structured/: CMakeLists.txt  README.md
components/app/boot_diagnostics/: CMakeLists.txt  README.md
components/app/boot_diagnostics/include/: boot_diagnostics.h
components/app/boot_diagnostics/src/: boot_diagnostics.cpp
components/app/can_callback/: CMakeLists.txt  README.md
components/app/current_calibration/: CMakeLists.txt  README.md
components/app/espnow_service/: CMakeLists.txt  README.md
components/app/espnow_service/include/: espnow_service.h
components/app/espnow_service/private_include/: espnow_service_internal.h
components/app/espnow_service/src/: espnow_service_business.cpp  espnow_service_business_protocol.cpp  espnow_service_product.cpp
components/app/global_state/: CMakeLists.txt  README.md
components/app/ota_service/: CMakeLists.txt  README.md
components/app/power_output/: CMakeLists.txt  README.md
components/app/protect/: CMakeLists.txt  README.md
components/app/screen/: CMakeLists.txt  README.md
components/app/screen/include/: screen.h
components/app/screen/private_include/: curve_history.h  page.h  pages.h  ui_common.h  ui_manager.h
components/app/screen/src/: curve_history.cpp  pages.cpp  screen.cpp  ui_common.cpp  ui_manager.cpp
components/app/shell_command/: CMakeLists.txt  README.md
components/app/web_backend/: CMakeLists.txt  README.md
components/app/web_backend/include/: web_backend.h
components/app/web_backend/private_include/: web_backend_internal.h
components/app/web_backend/src/: api_handlers.cpp  blackbox_api.cpp  log_capture.cpp  ota_handlers.cpp  page_handlers.cpp  request_json.cpp  rtos_stats_api.cpp  web_backend.cpp
components/app/wifi_service/: CMakeLists.txt  README.md
components/assets/Fonts/: README.md
components/assets/ui_resources/: README.md
components/assets/web_file/: CMakeLists.txt  README.md  app.css  blackbox.html  charts.html  control.html  firmware.html  index.html  logs.html  provision.html  status.html
components/assets/web_file/include/: web_file.h
components/assets/web_file/src/: web_file.cpp
components/blackbox/: CMakeLists.txt  blackbox.c  blackbox.cpp
components/blackbox/include/: blackbox.h
components/bsp/ADC/: README.md
components/bsp/HXC_NVS/: README.md
components/bsp/HXC_TWAI/: README.md
components/bsp/PWM/: README.md
components/bsp/Temperature/: CMakeLists.txt  ESPChipTemperatureSensor.hpp  README.md
components/bsp/circular_flash_buffer/: README.md
components/bsp/cpp_gpio_driver/: CMakeLists.txt  README.md
components/bsp/hardware/: CMakeLists.txt  README.md
components/bsp/shell/: README.md
components/bsp/st7735_driver/: CMakeLists.txt  README.md  idf_component.yml
components/bsp/wifi_manager/: README.md
components/common/Interp/: Interp.hpp  README.md
components/common/diagnostic_log/: CMakeLists.txt  README.md
components/cpp_gpio_driver/: CMakeLists.txt
components/cpp_gpio_driver/include/: cpp_gpio_driver.hpp
components/global_state/: CMakeLists.txt
components/global_state/include/: global_state.h
components/global_state/src/: global_state.cpp
components/middleware/Button/: Button.cpp  README.md
components/middleware/DNSServer/: CMakeLists.txt  README.md
components/middleware/HXC_NVS/: README.md
components/middleware/Interp/: CMakeLists.txt  ntc_table.h
components/middleware/WebServer/: CMakeLists.txt  README.md
components/middleware/blackbox/: README.md  blackbox.cpp
components/middleware/can_resistor/: CMakeLists.txt  README.md
components/middleware/energy_meter/: CMakeLists.txt  README.md
components/middleware/espnow_link/: CMakeLists.txt  README.md
components/middleware/ota_manager/: CMakeLists.txt  README.md
components/middleware/time_service/: CMakeLists.txt  README.md
components/protect/: CMakeLists.txt
components/protect/include/: protect.h
components/protect/src/: protect.cpp
components/st7735_driver/: .component_hash  CMakeLists.txt
components/st7735_driver/include/: Font.h  color.h  font5x7.h  graphics.h  st7735.h  st7735_commands.h
components/st7735_driver/src/: graphics.cpp  st7735.c  (+1 more)
components/t4v4res__st7735_driver/: CHECKSUMS.json  LICENSE  README.md  idf_component.yml
flash_storage_data/: blackbox.css  blackbox.html  blackbox.js
launchpad/: latest.toml
launchpad/v0.5.0/: config.toml
launchpad/v0.7.0/: config.toml
launchpad/v0.8.0/: config.toml
main/: CMakeLists.txt  ErrorRectangle.h  WarningRectangle.h  app_main.cpp  idf_component.yml  load_lp.hpp  main_ui.h  ui_close.h  ui_open.h  ui_static.h
main/ulp/: ina226.hpp  ulp_main.c  ulp_main.cpp  ulp_state.h
main/ulp_app/: README.md  ina226.hpp  ulp_Interp.hpp  ulp_main.cpp  ulp_state.h
main/ulp_loader/: README.md  ulp_loader.cpp  ulp_loader.h
ota/: latest.json
scripts/: README.md  generate_backlight_lut.py  generate_font.py  image_converter.py  parse_blackbox_csv.py  post_build.py  pre_build.py  shell_web.html
(+87 files in other folders)
